@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="output" path="bin/classes"/>
+
+    <classpathentry
+        kind="src"
+        path="src" />
+
+    <classpathentry
+        kind="src"
+        path="gen" />
+
+    <classpathentry
+        kind="con"
+        path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK" />
+
+    <classpathentry
+        kind="con"
+        path="com.android.ide.eclipse.adt.LIBRARIES" />
+
+    <classpathentry
+        kind="output"
+        path="bin/classes" />
+
 </classpath>
